# shutoh

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  setup.py
.github/workflows/: build.yml  cmake-multi-platform.yml  pip-install.yml  python-build.yml
docs/: cli_documentation.md
include/shutoh/: error.hpp  frame_timecode.hpp  scene_manager.hpp  video_frame.hpp  video_stream.hpp
include/shutoh/detector/: adaptive_detector.hpp  content_detector.hpp  hash_detector.hpp  histogram_detector.hpp  threshold_detector.hpp
src/: blocking_queue.hpp  command_runner.cpp  command_runner.hpp  config.cpp  config.h  config.hpp  config.rs  content_detector.cpp  content_detector.hpp  csv_writer.cpp  csv_writer.hpp  error.hpp  flash_filter.cpp  flash_filter.hpp  frame_timecode.cpp  frame_timecode.hpp  image_extractor.cpp  image_extractor.hpp  main.cpp  main.rs  scene_manager.cpp  scene_manager.hpp  video_frame.hpp  video_splitter.cpp  video_splitter.hpp  video_stream.cpp  video_stream.hpp
src/bindings/: bind_detector.cpp  bindings.cpp
src/detector/: adaptive_detector.cpp  adaptive_detector.hpp  base_detector.hpp  content_detector.cpp  content_detector.hpp  flash_filter.cpp  hash_detector.cpp  hash_detector.hpp  histogram_detector.cpp  histogram_detector.hpp  threshold_detector.cpp  threshold_detector.hpp
src/old/: adaptive_detector.cpp  base_detector.h  command_runner.cpp  command_runner.h  content_detector.h  fixed_size_deque.h  flash_filter.h  frame_timecode_pair.h  hash_detector.cpp  hash_detector.h  image_extractor.cpp  parameters.cpp  parameters.h  scene_manager.h  threshold_detector.cpp  threshold_detector.h  video_stream.cpp  video_stream.h
tests/: CMakeLists.txt  test_content_detector.cpp  test_frametime.cpp  test_scene_manager.cpp  test_video_stream.cpp
